objects/Top_5_Frequently_Accessed_Apps__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is to hold the 5 recent accessed apps for each user. This custom setting is being used in displaying data on the Hamburger menu. Created for CR-20141020-7816.</description>
    <fields>
        <fullName>Recent_Intranet_Content_Item_1__c</fullName>
        <description>Created for CR-20141020-7816.
Will hold the most recent clicked item Id value.</description>
        <label>Recent Intranet Content Item 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Intranet_Content_Item_2__c</fullName>
        <description>Created for CR-20141020-7816.
Will hold the 2nd recent clicked item Id value.</description>
        <label>Recent Intranet Content Item 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Intranet_Content_Item_3__c</fullName>
        <description>Created for CR-20141020-7816.
Will hold the 3rd recent clicked item Id value.</description>
        <label>Recent Intranet Content Item 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Top 5 Frequently Accessed Apps</label>
</CustomObject>